# llamda.x

./: .pylintrc  LICENSE  README.md  pyproject.toml
docs/: .claude.md  .coverage  api_reference.md  conf.py  index.md
docs/_build/doctrees/: api_reference.doctree  claude.doctree  environment.pickle  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.md.txt  usage.md.txt
docs/_build/json/: api_reference.fjson  environment.pickle  genindex.fjson  globalcontext.json  index.fjson  objects.inv  py-modindex.fjson  search.fjson  searchindex.json  usage.fjson
docs/_build/json/_static/: documentation_options.js
docs/_build/markdown/: claude.md  index.md
docs/_build/text/: api_reference.txt  claude.txt  index.txt
docs/_build/xml/: api_reference.xml  claude.xml  index.xml  usage.xml
examples/example_functions/: __init__.py  alpha.py  aq.py
src/: __init__.py  litellm_adapter.py  llamda_client.py  spec.md
src/examples/: __init__.py  example.py
src/examples/example_functions/: aq.py
src/examples/prompts/: schizopot.py
src/llms/: __init__.py  ll_exchange.py  ll_message.py  ll_tool.py  oai_api_types.py  roles_and_messages.py
src/tool_use/: __init__.py  llamda_callable.py  llamda_function.py  llamda_pydantic.py  llamda_tools.py  llamdafy.py  process_fields.py  tool.py
